# myshafa

./: Cargo.toml  config.yml  docker-compose.yml
myshafa_app/: Cargo.toml
myshafa_app/src/lib/filters/: auth_filters.rs  mod.rs
myshafa_app/src/lib/handlers/: auth_handler.rs
myshafa_core/: Cargo.toml
myshafa_core/src/configs/: db.rs  mod.rs  server.rs
myshafa_core/src/errors/: config_error.rs  mod.rs
